[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-json"
version = "0.1.0"
description = "Robust JSON extraction utilities for repairing LLM generated payloads."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Open Source Contributor"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["json", "llm", "validation", "repair"]
dependencies = [
  "typing-extensions>=4.0"
]

[project.optional-dependencies]
speedups = [
  "re2>=0.2.20230319; platform_system != 'Windows'",
  "numba>=0.58"
]
pyjson5 = ["pyjson5>=1.6"]

[tool.setuptools.packages.find]
where = ["src"]
